# llm-zoomcamp

./: homework-week-2.ipynb  homework.ipynb  pyproject.toml
